[tool.poetry]
name = "gptproxytelegrambot"
version = "0.1.0"
description = "proxy for gpt from Russia in telegram"
authors = ["Oleg K. <ok@hustn.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyTelegramBotAPI = "^4.10.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
openai = "^0.27.4"
ipython = "^8.12.0"
peewee = "^3.16.0"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
